# slicer

./: .gitmodules  AGENTS.md  README.md  REWRITE_PROGRESS.md
data/schemas/: filament.schema.json  printer.schema.json  slice_config.schema.json
lib/: Cargo.toml
lib/src/: lib.rs  main.rs
lib/src/bridge/: mod.rs
lib/src/clipper/: mod.rs
lib/src/config/: print_config.rs
lib/src/gcode/: RETRACT_CROSSING.md  arc_fitting.rs  mod.rs  path.rs  retract_crossing.rs  validation.rs
lib/src/geometry/: line.rs  mod.rs  polyline.rs  simplify.rs
lib/src/infill/: mod.rs
lib/src/perimeter/: mod.rs
lib/src/pipeline/: mod.rs
lib/src/slice/: mod.rs  surface.rs
scripts/: convert_profiles.py  line_diff.sh
ui/: index.html  index.ts  package.json  tsconfig.json
ui/src/: App.tsx  index.css
ui/src/api/: chat.ts
ui/src/components/: AIChat.tsx  GCodeRenderer.tsx  Nozzle.tsx
ui/src/components/ui/: button.tsx  dropdown-menu.tsx  tabs.tsx
ui/src/parser/: gcodeParser.ts
ui/src/types/: gcode.ts
