[package]
name = "slicer"
version = "0.1.0"
edition = "2021"
authors = ["alexdaima"]
description = "A Rust rewrite of the BambuStudio core slicing algorithm"
license = "AGPL-3.0"
repository = "https://github.com/alexdaima/slicer"
keywords = ["3d-printing", "slicer", "gcode", "stl"]
categories = ["graphics", "rendering"]

[lib]
name = "slicer"
path = "src/lib.rs"

[[bin]]
name = "slicer-cli"
path = "src/main.rs"

[dependencies]
# Geometry & Math
nalgebra = "0.32"
geo = "0.27"
geo-clipper = "0.8"
ordered-float = "4.2"

# Mesh Processing
stl_io = "0.7"
rstar = "0.11"

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Async (for MCP server)
tokio = { version = "1.34", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"

[[bench]]
name = "slicing_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
